<resources>
    <string name="app_name">Weather Works</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_open_weather_map_screen">OpenWeatherMapScreen</string>
    <string name="title_activity_metservice_screen">MetserviceScreen</string>
    <string name="title_activity_wuscreen">WUScreen</string>
    <string name="desc_not_loaded">Loading...</string>
    <string name="upcoming_days_title">Your weather forecast..</string>
    <string name="title_activity_forecast_days_screen">ForecastDaysScreen</string>
    <string name="not_available">Not Available.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_all_providers_screen">AllProvidersScreen</string>
    <string name="variance_title">Variability</string>
    <string name="var_temp_title">Temperature:</string>
    <string name="var_rain_title">Rain:</string>
    <string name="var_wind_title">Wind:</string>
</resources>
