<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainScreen"
    android:background="@color/background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="Your Weather Today:"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtMainTitle"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:layout_marginRight="-10sp"
                android:src="@drawable/app_logo"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginStart="20sp"
            android:layout_gravity="end">

            <TextView
                android:id="@+id/txtVarianceTitle"
                android:text="@string/variance_title"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <!-- Temperature Variance -->

            <TextView
                android:id="@+id/txtVarTempTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/var_temp_title"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txtVarTemp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_not_loaded"
                android:textSize="12sp"/>

            <!-- Rain Variance -->

            <TextView
                android:id="@+id/txtVarRainTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/var_rain_title"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txtVarRain"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_not_loaded"
                android:textSize="12sp"/>

            <!-- Wind Variance -->

            <TextView
                android:id="@+id/txtVarWindTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/var_wind_title"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txtVarWind"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_not_loaded"
                android:textSize="12sp"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="@dimen/description_width"
            android:layout_height="@dimen/description_height"
            android:layout_marginTop="-200sp"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true">

            <!-- Metservice -->

            <TextView
                android:id="@+id/txtMainMetserviceTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Metservice: "/>

            <TextView
                android:id="@+id/txtMainMetserviceDescription"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="@dimen/description_margin"
                android:text="@string/desc_not_loaded"/>

            <!-- Open Weather Map -->

            <TextView
                android:id="@+id/txtMainOpenWeatherMapTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Open Weather Map: "/>


            <TextView
                android:id="@+id/txtMainOpenWeatherMapDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="@dimen/description_margin"
                android:text="@string/desc_not_loaded"/>

            <!-- WeatherUnderground -->

            <TextView
                android:id="@+id/txtMainWeatherUndergroundTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Weather Underground: "/>

            <TextView
                android:id="@+id/txtMainWeatherUndergroundDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_margin="@dimen/description_margin"
                android:text="@string/desc_not_loaded"/>

            </LinearLayout>

        </ScrollView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvProviders"/>

    </LinearLayout>
</RelativeLayout>
